################################################################################
cmake_minimum_required(VERSION 3.23.0)

################################################################################
# Project
################################################################################
project(mbf-tp-xlswriter)

################################################################################
# Finally, go to xlsx subfolder
################################################################################
add_subdirectory(src/xlsx)
